# account-linker-bot

./: Cargo.toml
conf/: bot-config.yml  log4rs.yml
data/: acc-linker-bot.db
migrations/20171001184200_create_user_infos/: down.sql  up.sql
src/: database.rs  entities.rs  main.rs
src/modules/: lor_ru.rs  matrix_org.rs  mod.rs
src/modules/lor_ru/: mod.rs
src/modules/mankier/: mod.rs
src/modules/matrix_org/: matrix_api.rs  mod.rs
