[package]
name = "account_linker_bot"
version = "0.1.0"
authors = ["Kanedias <kanedias@xaker.ru>"]

[dependencies]
# db
diesel = { version = "0.15.0", features = ["sqlite"] }
diesel_codegen = { version = "0.15.0", features = ["sqlite"] }
# logging
log = "0.3"             # log facade
log4rs = "0.7.0"        # log impl
# http
hyper = "0.11.2"        # request builder
select = "0.4.2"        # http parsing